FIX attempt for jarring scrolling effect on mobile 8 SVH on main div

--- a/projects/work 1/Deadspace (2008)/css/deadspace_common.css
+++ b/projects/work 1/Deadspace (2008)/css/deadspace_common.css
@@ -37,6 +37,7 @@ main div {
   height: 90vh;
   align-content: center;
   padding: 0 8vw;
+  background-color: green;
 }
 div.half {
   height: 30vh;
@@ -248,7 +249,7 @@ video {
   background-position: center;
   background-size: cover;
   width: 100%;
-  min-height: 100svh;
+  max-height: 100svh;
   margin: 0;
   padding: 0;
 }
